--- a/core/linux-veyron/PKGBUILD
+++ b/core/linux-veyron/PKGBUILD
@@ -6,50 +6,105 @@ buildarch=4
 pkgbase=linux-veyron
 _kernelname=${pkgbase#linux}
 _desc="Veyron Chromebooks"
-pkgver=3.14.0
-pkgrel=24
-_commit=b093583dda7e0be315bbf9aea4a697d1e20cd58e
+pkgver=3.18.0
+pkgrel=1
+_commit=cc24b65fe6baf4a6c5eb4a9c9b98631cef489a98
 arch=('armv7h')
-url="https://chromium.googlesource.com/chromiumos/third_party/kernel/+/chromeos-3.14"
+url="https://chromium.googlesource.com/chromiumos/third_party/kernel/+/chromeos-3.18"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'uboot-tools' 'vboot-utils' 'dtc')
 options=('!strip')
-source=("https://chromium.googlesource.com/chromiumos/third_party/kernel/+archive/${_commit}.tar.gz"
+source=(https://chromium.googlesource.com/chromiumos/third_party/kernel/+archive/${_commit}.tar.gz
         http://archlinuxarm.org/builder/src/veyron/sd{8787,8797,8897}_uapsta_cros.bin
-        'http://archlinuxarm.org/builder/src/veyron/BCM4354_003.001.012.0306.0659.hcd'
-        '0001-use-chromiumos-mwifiex-drivers.patch'
-        '0002-mwifiex-do-not-create-AP-and-P2P-interfaces-upon-dri.patch'
-        '0003-UPSTREAM-soc-rockchip-add-handler-for-usb-uart-funct.patch'
-        '0004-fix-brcmfmac-oops-and-race-condition.patch'
-        'config'
-        'kernel.its'
-        'kernel.keyblock'
-        'kernel_data_key.vbprivk'
-        'cmdline'
-        'brcmfmac4354-sdio.txt'
-        '99-veyron-brcm.rules')
-md5sums=('8f71593561163c049a487751fab6dc8e'
-         'bda543cb5943eac34e16d12911f3ee99'
-         '5e2d7cd74de07d13052de99411c13a2f'
-         '1534c1dbfe5df35a5634072f7b912840'
-         '20f8931f3795e5226829d48c3d470334'
-         '3ac01cf94902936a732bf3f0df79eb43'
-         '2e3d4a2634a76ff37f3dae94a7ced6a3'
-         '8aaa2709e1c9466c71c6646643eb4edf'
-         '40351745df5a762edd50a50386df71ee'
-         'f1860967a80286449b23439ad51dc7b0'
-         '761d2e8cef38584b9e2f478e8096e458'
-         '61c5ff73c136ed07a7aadbf58db3d96a'
-         '584777ae88bce2c5659960151b64c7d8'
-         'e3bdf63d5d936fb982c4cd62da1433ad'
-         '97297f16115fb38e157bdc3a4527252d'
-         'cd779bcbe50e6562428279ff7e5b0cd9')
+        http://archlinuxarm.org/builder/src/veyron/BCM4354_003.001.012.0306.0659.hcd
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/rk3288-veyron-speedy.dts
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/rk3288-veyron-chromebook.dtsi
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/cros-ec-sbs.dtsi
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/rk3288-veyron-sdmmc.dtsi
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/rk3288-veyron-analog-audio.dtsi
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/rk3288-veyron.dtsi
+        https://raw.githubusercontent.com/torvalds/linux/master/arch/arm/boot/dts/rk3288.dtsi
+        https://raw.githubusercontent.com/torvalds/linux/master/include/dt-bindings/pinctrl/rockchip.h
+        https://raw.githubusercontent.com/torvalds/linux/master/include/dt-bindings/power/rk3288-power.h
+        https://raw.githubusercontent.com/torvalds/linux/master/include/dt-bindings/soc/rockchip,boot-mode.h
+        https://raw.githubusercontent.com/torvalds/linux/master/include/dt-bindings/clock/rk3288-cru.h
+        0001-fix-sound-core-seq-makefile.patch
+        0002-fix-sound-core-seq-seq_device.patch
+        0003-fix-drivers-net-wireless-4.2-brcm80211-brcmsmac-makefile.patch
+        0004-fix-drivers-net-wireless-4.2-brcm80211-brcmutil-makefile.patch
+        0005-fix-drivers-net-wireless-4.2-brcm80211-brcmfmac-makefile.patch
+        0006-fix-drivers-staging-wlan-ng-cfg80211.patch
+        0007-fix-include-linux-mmc-sdio_ids.patch
+        0008-add-speedy-dtb-to-makefile.patch
+        config
+        kernel.its
+        kernel.keyblock
+        kernel_data_key.vbprivk
+        cmdline
+        brcmfmac4354-sdio.txt
+        99-veyron-brcm.rules)
+md5sums=(8a616276de2b3aacd69cf4804dbaf340  # 8a616276de2b3aacd69cf4804dbaf340.tar.gz
+         bda543cb5943eac34e16d12911f3ee99  # sd8787_uapsta_cros.bin
+         5e2d7cd74de07d13052de99411c13a2f  # sd8797_uapsta_cros.bin
+         1534c1dbfe5df35a5634072f7b912840  # sd8897_uapsta_cros.bin
+         20f8931f3795e5226829d48c3d470334  # BCM4345_003.001.012.0306.0659.hcd
+         0efa1f67b86eb5ff0f35257741bb2de9  # rk3288-veyron-speedy.dts
+         f8071fdf40b22b6d6f7764ea54585b24  # rk3288-veyron-chromebook.dtsi
+         31d7ce4321d456fb5881e8a2d5c4ebac  # cros-ec-sbs.dtsi
+         299b26f3bbb6b9f10700677673a0ad32  # rk3288-veyron-sdmmc.dtsi
+         b151d359145747ed18bc42286d0074db  # rk3288-veyron-analog-audio.dtsi
+         6128ed6075c65f206b8a83d1e2a65aff  # rk3288-veyron.dtsi
+         0112e664058d97e1e80ecaeb9338cf15  # rk3288.dtsi
+         a8415fe041181ac81baa068bdf6323cd  # rockchip.h
+         6ceaa6aae4174a51cd6951b68f39e532  # rk3288-power.h
+         58d45cb76a3879b93d5b3bc5bd5c2094  # rockchip,boot-mode.h
+         dacf2e7ac4ebe7113985876414d6e46c  # rk3288-cru.h
+         d5be7cdd18f6582eb174c3643b350d0d  # 0001-fix-sound-core-seq-makefile.patch
+         68eab4ff10285b20e1d4e400ba7a832a  # 0002-fix-sound-core-seq-seq_device.patch
+         8dd255513cb1ae051c0aa387688b96c6  # 0003-fix-drivers-net-wireless-4.2-brcm80211-brcmsmac-makefile.patch
+         5652742e74e3b9ba513407fd0588b22a  # 0004-fix-drivers-net-wireless-4.2-brcm80211-brcmutil-makefile.patch
+         20aab44d3bac9ca01f38308017fff155  # 0005-fix-drivers-net-wireless-4.2-brcm80211-brcmfmac-makefile.patch
+         aa4ff0619425a35f89aab70d11085b7f  # 0006-fix-drivers-staging-wlan-ng-cfg80211.patch
+         5eede750d68afeb3a94a64212b142b55  # 0007-fix-include-linux-mmc-sdio_ids.patch
+         2d3499e765e8ecbd5901225eee2c736b  # 0008-add-speedy-dtb-to-makefile.patch
+         51a452857c3b4b5d9fd38f5f34a8221f
+         3bf865152d74e844b1f13eb26e6a48da
+         61c5ff73c136ed07a7aadbf58db3d96a
+         584777ae88bce2c5659960151b64c7d8
+         e3bdf63d5d936fb982c4cd62da1433ad
+         97297f16115fb38e157bdc3a4527252d
+         cd779bcbe50e6562428279ff7e5b0cd9)
 
 prepare() {
-  git apply 0001-use-chromiumos-mwifiex-drivers.patch
-  git apply 0002-mwifiex-do-not-create-AP-and-P2P-interfaces-upon-dri.patch
-  git apply 0003-UPSTREAM-soc-rockchip-add-handler-for-usb-uart-funct.patch
-  git apply 0004-fix-brcmfmac-oops-and-race-condition.patch
+  local patches=(
+    0001-fix-sound-core-seq-makefile.patch
+    0002-fix-sound-core-seq-seq_device.patch
+    0003-fix-drivers-net-wireless-4.2-brcm80211-brcmsmac-makefile.patch
+    0004-fix-drivers-net-wireless-4.2-brcm80211-brcmutil-makefile.patch
+    0005-fix-drivers-net-wireless-4.2-brcm80211-brcmfmac-makefile.patch
+    0006-fix-drivers-staging-wlan-ng-cfg80211.patch
+    0007-fix-include-linux-mmc-sdio_ids.patch
+    0008-add-speedy-dtb-to-makefile.patch
+  )
+
+  for p in ${patches[@]}; do
+    patch -p1 < $p
+  done
+
+  local boot_dts_dir=arch/arm/boot/dts
+  local dt_bindings_dir=include/dt-bindings
+
+  cp rk3288-veyron-speedy.dts        $boot_dts_dir/
+  cp rk3288-veyron-chromebook.dtsi   $boot_dts_dir/
+  cp cros-ec-sbs.dtsi                $boot_dts_dir/
+  cp rk3288-veyron-sdmmc.dtsi        $boot_dts_dir/
+  cp rk3288-veyron-analog-audio.dtsi $boot_dts_dir/
+  cp rk3288-veyron.dtsi              $boot_dts_dir/
+  cp rk3288.dtsi                     $boot_dts_dir/
+  cp rockchip.h                      $dt_bindings_dir/pinctrl/
+  cp rk3288-power.h                  $dt_bindings_dir/power/
+  cp rockchip,boot-mode.h            $dt_bindings_dir/soc/
+  cp rk3288-cru.h                    $dt_bindings_dir/clock/
 
   cp config .config
 
@@ -59,7 +114,7 @@ prepare() {
   # don't run depmod on 'make install'. We'll do this ourselves in packaging
   sed -i '2iexit 0' scripts/depmod.sh
 
-  export WIFIVERSION=-3.8
+  export WIFIVERSION=-4.2
 
   cp include/linux/compiler-gcc5.h include/linux/compiler-gcc6.h
 }
@@ -109,7 +164,7 @@ _package() {
 
   mkdir -p "${pkgdir}"/{lib/modules,lib/firmware,boot/dtbs}
   make INSTALL_MOD_PATH="${pkgdir}" modules_install
-  
+
   mkimage -D "-I dts -O dtb -p 2048" -f kernel.its vmlinux.uimg
   dd if=/dev/zero of=bootloader.bin bs=512 count=1
   vbutil_kernel \
