--- a/core/linux-veyron/config
+++ b/core/linux-veyron/config
@@ -1201,7 +1201,7 @@ CONFIG_MAC80211_RC_DEFAULT_MINSTREL=y
 CONFIG_MAC80211_RC_DEFAULT="minstrel_ht"
 # CONFIG_MAC80211_MESH is not set
 CONFIG_MAC80211_LEDS=y
-CONFIG_MAC80211_DEBUGFS=n
+# CONFIG_MAC80211_DEBUGFS is not set
 # CONFIG_MAC80211_MESSAGE_TRACING is not set
 CONFIG_MAC80211_DEBUG_MENU=y
 # CONFIG_MAC80211_NOINLINE is not set
@@ -1213,9 +1213,7 @@ CONFIG_MAC80211_VERBOSE_DEBUG=y
 # CONFIG_MAC80211_IBSS_DEBUG is not set
 # CONFIG_MAC80211_PS_DEBUG is not set
 # CONFIG_MAC80211_TDLS_DEBUG is not set
-# CONFIG_MAC80211_DEBUG_COUNTERS is not set
 CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
-# CONFIG_MAC80211_WIFI_DIAG is not set
 CONFIG_WIMAX=m
 CONFIG_WIMAX_DEBUG_LEVEL=8
 CONFIG_RFKILL=y
@@ -1704,7 +1702,6 @@ CONFIG_RT2X00_LIB=m
 CONFIG_RT2X00_LIB_FIRMWARE=y
 CONFIG_RT2X00_LIB_CRYPTO=y
 CONFIG_RT2X00_LIB_LEDS=y
-# CONFIG_RT2X00_LIB_DEBUGFS is not set
 # CONFIG_RT2X00_DEBUG is not set
 # CONFIG_WL_MEDIATEK is not set
 CONFIG_RTL_CARDS=m
@@ -1720,7 +1717,6 @@ CONFIG_MWIFIEX_SDIO=m
 # CONFIG_MWIFIEX_USB is not set
 # CONFIG_CW1200 is not set
 # CONFIG_RSI_91X is not set
-# CONFIG_BCMDHD is not set
 
 #
 # WiMAX Wireless Broadband devices
@@ -3789,6 +3785,7 @@ CONFIG_USB_WPAN_HCD=m
 # SOC (System On Chip) specific Drivers
 #
 # CONFIG_SOC_TI is not set
+# CONFIG_ROCKCHIP_USB_UART is not set
 
 #
 # SYSEDP Framework
